# Nova-Log

./: CMakeLists.txt  brun.sh  vcpkg.json
src/app/: main.cpp
src/core/: logger.cpp
src/core/include/nova/logger/: logger.hpp
